--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,7 @@ body {
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 300px;
+  height: 200px;
   text-align: center;
 }
 
