--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -55,7 +55,7 @@ body {
 /* Thumbnail image */
 .anime-card img {
   width: 100%;
-  height: 250px;
+  height: 200px;
   display: block;
   border-bottom: 1px solid #eee;
 }
@@ -240,8 +240,8 @@ body {
 
 .story {
     flex: 0 0 auto;
-    width: 400px;
-    height: 200px;
+    width: 385px;
+    height: 210px;
     scroll-snap-align: start;
     position: relative;
     border-radius: 10px;
@@ -251,6 +251,7 @@ body {
 .story img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     object-fit: cover;
     transition: transform 0.3s ease;
     border: 3px solid #ff0077;
